--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('./font.css');
+
+:root {
+  --primary: #002244;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: inherit;
+  text-decoration: none;
+  font-family: "Ubuntu", sans-serif;
+  list-style: none;
+}
+
+::-webkit-scrollbar-track {
+  /* width: 20px; */
+}
+
+body {
+  height: 100vh;
+  overflow: hidden;
+}
+
+.icon {
+  width: 20px;
+}
+
+.content {
+  display: flex;
+}
+
+.sub-content {
+  width: 83%;
+  position: relative;
+  height: 100vh;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgba(236, 236, 236, 0.9);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: black;
 }
