--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,10 +1,37 @@
 .sidebar {
     width: 17%;
-    padding: 1rem;
+    padding: 0 1rem;
     position: relative;
     background-color: var(--primary);
     color: white;
     height: 100vh;
+}
+
+.sidebar .logo {
+    width: 100%;
+    padding: 1rem 0.5px;
+    font-size: 30px;
+    border-bottom: 2px solid white;
+}
+
+.sidebar .balance {
+    width: 100%;
+    height: 120px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    background-color: white;
+    color: black;
+    border-radius: 1rem;
+    margin: 1rem 0;
+}
+
+.sidebar .balance p {
+    font-size: 25px;
+    font-weight: bold;
 }
 
 .sidebar ul {
@@ -48,4 +75,9 @@
 .submenu ul li:hover {
     background-color: var(--primary);
     color: white;
+}
+
+.active {
+    background-color: rgba(236, 236, 236, 1);
+    color: black;
 }
